parser issue fixes

--- a/parser.html
+++ b/parser.html
@@ -8,8 +8,8 @@
     </head>
 <body>
 
-    <div>
-        <button onclick="beautify()"> Beautify</button>
+    <div id="actioncontainer">
+        <button class="button-14" onclick="beautify()"> Beautify</button>
     </div>
 <div class="splitter">
     <div id="first">
