--- a/parser.html
+++ b/parser.html
@@ -5,6 +5,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
         <script src="parser.js"></script>
         <script src="home.js"></script>
+        <script src="html_preview.js"></script>
         <link rel="stylesheet" href="parser.css"></link>
     </head>
 <body>
