--- a/parser.html
+++ b/parser.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>JSON Parser | JSON Beautifier</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
+
+        <meta name="description" content="JSON beautifier">
+        <meta name="keywords" content="JSON, JSON Parser, JSON beautifier, Beautify JSON, Online JSON Parser">
+        <meta name="author" content="Ganesh S Vidharthi">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
         <script src="parser.js"></script>
