update statscouter code

--- a/parser.html
+++ b/parser.html
@@ -18,6 +18,15 @@
         <script src="home.js"></script>
         <script src="html_preview.js"></script>
         <link rel="stylesheet" href="parser.css"></link>
+	    <!-- Default Statcounter code for JSON Beautifier https://jsonparser.info -->
+        <script type="text/javascript">
+            var sc_project=12770625;
+            var sc_invisible=1;
+            var sc_security="9f2b99c6";
+        </script>
+        <script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
+        <noscript><div class="statcounter"><a title="Web Analytics" href="https://statcounter.com/" target="_blank"><img class="statcounter" src="https://c.statcounter.com/12770625/0/9f2b99c6/1/" alt="Web Analytics" referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+        <!-- End of Statcounter Code -->
     </head>
 <body>
 
