update button to test webhook

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <button class="button-14 marT10 floR marR3" onclick="window.clear('formatpane')"> Clear</button>
         <button class="button-14 marT10 floR marR3" onclick="window.format('textarea')">Format</button>
         <button class="button-14 marT10 floR marR3" onclick="window.unformat('textarea')">Un-Format</button>
-        <button class="button-14 marT10 floR marR3" onclick="window.copy('formatpane')"> Copy</button>
+        <button class="button-14 marT10 floR marR3" onclick="window.copy('formatpane')"> Copy text</button>
     </div>
 </div>
     
